[tool.poetry]
name = "luxembook"
version = "0.1.0"
description = "Luxembourg gardens tennis court automated booking system"
authors = ["Antonin Jousson <a.jousson@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Antoninj/luxembook"
keywords = ["booking-automation", "tennis"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.4.3"
requests = "^2.28.1"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
