[tool.poetry]
name = "luxembook"
version = "0.1.0"
description = "Luxembourg gardens tennis court automated booking system"
authors = ["Antonin Jousson <antonin@jousson.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Antoninj/luxembook"
keywords = ["booking automation", "tennis", "fft"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.4.3"
typer = "^0.6.1"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39']
